# plotz_rs

./: .gitignore  1  Cargo.toml  DEVELOPMENT.md  README.md
art/3dtest/: Cargo.toml
art/3dtest/src/: main.rs
art/arcs/: Cargo.toml  README.md
art/arcs/src/: main.rs
art/croptest/: Cargo.toml
art/croptest/src/: main.rs
art/flowfield/: Cargo.toml
art/flowfield/src/: main.rs
art/girih/: Cargo.toml
art/girih/src/: geom.rs  layout.rs  main.rs  strategy2.rs  strategy3.rs
art/gravityfield/: Cargo.toml
art/gravityfield/src/: main.rs
art/lewitt/: Cargo.toml  README.md
art/lewitt/src/: main.rs
art/tilings/: Cargo.toml
art/tilings/src/: ab_rhomb.rs  cromwell.rs  danzers.rs  main.rs
art/voronoi/: Cargo.toml  README.md
art/voronoi/src/: main.rs
art/wang/: Cargo.toml
art/wang/src/: main.rs
art/wrapping/: Cargo.toml
art/wrapping/src/: main.rs
mk-3dtest/: Cargo.toml
mk-3dtest/src/: main.rs
mk-arcs/: Cargo.toml
mk-arcs/src/: main.rs
mk-croptest/: Cargo.toml
mk-croptest/src/: main.rs
mk-flowfield/: Cargo.toml
mk-flowfield/src/: main.rs
mk-girih/: Cargo.toml
mk-girih/src/: geom.rs  layout.rs  main.rs  strategy1.rs  strategy2.rs  strategy3.rs
mk-lewitt/: Cargo.toml
mk-lewitt/src/: main.rs
mk-patterns/: Cargo.toml  README.md
mk-patterns/src/: main.rs
mk-tilings/: Cargo.toml
mk-tilings/src/: ab_rhomb.rs  cromwell.rs  danzers.rs  main.rs
mk-voronoi/: Cargo.toml  README.md
mk-voronoi/src/: main.rs
mk-wang/: Cargo.toml
mk-wang/src/: main.rs
mk-wrapping/: Cargo.toml
mk-wrapping/src/: main.rs
orchestrator/: Cargo.toml  README.md
orchestrator/src/: main.rs
plotz-color/: Cargo.toml  README.md
plotz-color/src/: lib.rs
plotz-core/: Cargo.toml
plotz-core/src/: bar.rs  bucket.rs  bucketer.rs  canvas.rs  char.rs  colored_obj.rs  colored_polygon.rs  colorer.rs  colorer_builder.rs  draw_obj.rs  draw_obj_inner.rs  draw_objs.rs  frame.rs  group.rs  lib.rs  map.rs  svg.rs
plotz-core/testdata/: example.geojson
plotz-geojson/: Cargo.toml
plotz-geojson/src/: lib.rs
plotz-geometry/: Cargo.toml  README.md
plotz-geometry/src/: bounded.rs  char.rs  crop.rs  curve.rs  draw_obj.rs  draw_obj_inner.rs  grid.rs  grid_layout.rs  group.rs  interpolate.rs  intersection.rs  intersects.rs  isxn.rs  lib.rs  macros.rs  obj.rs  obj2.rs  object2d.rs  object2d_inner.rs  plottable.rs  point.rs  polygon.rs  segment.rs  shading.rs  shading_02.rs  style.rs  styled_obj2.rs  traits.rs  txt.rs  utils.rs
plotz-geometry/src/grid/: grid_layout.rs  mod.rs
plotz-geometry/src/intersects/: mod.rs  opinion.rs  specialcase.rs
plotz-geometry/src/overlaps/: mod.rs  opinion.rs
plotz-geometry/src/overlaps/opinion/: mod.rs  multiline_opinion.rs  polygon_opinion.rs  segment_opinion.rs
plotz-geometry/src/polygon/: crop_graph.rs  crop_logic.rs  cropgraph.rs  mod.rs  multiline.rs
plotz-geometry/src/shading/: mod.rs  shade_config.rs
plotz-geometry/src/shapes/: curve.rs  ml.rs  mod.rs  multiline.rs  pgc.rs  point.rs  polygon_with_cavity.rs  pt.rs  pt2.rs  ray.rs  ry.rs  ry2.rs  segment.rs  sg.rs  sg2.rs  text.rs  txt.rs
plotz-geometry/src/shapes/pg/: annotated_isxn_result.rs  crop_graph.rs  mod.rs  multiline.rs
plotz-geometry/src/shapes/pg2/: annotated_isxn_result.rs  crop_graph.rs  mod.rs  multiline.rs
plotz-geometry/src/shapes/polygon/: annotated_isxn_result.rs  crop_graph.rs  mod.rs  multiline.rs
plotz-geometry3d/: Cargo.toml  README.md
plotz-geometry3d/src/: bounded3.rs  camera.rs  cube3d.rs  face.rs  group.rs  group3.rs  lib.rs  obj3.rs  object.rs  object3d.rs  object3d_inner.rs  object_inner.rs  occluder.rs  point3d.rs  polygon3d.rs  scene.rs  segment3d.rs  style.rs  styled_obj3.rs
plotz-geometry3d/src/scene/: debug.rs  mod.rs  occluder.rs
plotz-geometry3d/src/shapes/: cube3d.rs  cuboid3d.rs  face.rs  mod.rs  pg3.rs  point3.rs  point3d.rs  polygon3.rs  polygon3d.rs  pt3.rs  ray3.rs  ry3.rs  segment3.rs  segment3d.rs  sg3.rs
plotz-physics/: Cargo.toml
plotz-physics/src/: framework.rs  lib.rs  particle.rs
plotz-shp/: Cargo.toml  README.md
plotz-shp/src/: lib.rs
src/: main.rs
svg-splitter/: Cargo.toml  README.md
svg-splitter/src/: main.rs
testdata/: wuppertal.geojson
