[package]
name = "plotz_rs"
version = "0.0.1"
authors = ["james.adam.buckland@gmail.com"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ambuc/plotz_rs"
edition = "2021"

[workspace]
members = [
    "mk-tilings",
    "mk-voronoi",
    "mk-wang",
    "orchestrator",
    "plotz-color",
    "plotz-core",
    "plotz-geojson",
    "plotz-geometry",
    "plotz-shp",
    "svg-splitter",
]


[dependencies]
argh = "*"
glob = "*"
multimap = "0.8.3"
plotz-core = { path = "plotz-core" }
pretty_env_logger = "*"
thiserror = "*"
tracing = "*"
tracing-subscriber = "*"

[dev-dependencies]
tempdir = "*"
resvg = "*"
usvg = "*"
tiny-skia = "*"
