[package]
name = "plotz_rs"
version = "0.0.1"
authors = ["james.adam.buckland@gmail.com"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ambuc/plotz_rs"
edition = "2021"

[workspace]
members = [
    "mk-3dtest",
    "mk-arcs",
    "mk-croptest",
    "mk-girih",
    "mk-lewitt",
    "mk-tilings",
    "mk-voronoi",
    "mk-wang",
    "mk-wrapping",
    "orchestrator",
    "plotz-color",
    "plotz-core",
    "plotz-geojson",
    "plotz-geometry",
    "plotz-geometry3d",
    "plotz-shp",
    "svg-splitter",
]


[dependencies]
argh = "*"
glob = "*"
multimap = "0.8.3"
plotz-core = { path = "plotz-core" }
plotz-geometry = { path = "plotz-geometry" }
plotz-geometry3d = { path = "plotz-geometry3d" }
pretty_env_logger = "*"
thiserror = "*"
tracing = "*"
tracing-subscriber = "*"

[dev-dependencies]
tempdir = "*"
resvg = "*"
usvg = "*"
tiny-skia = "*"
