[package]
name = "plotz_rs"
version = "0.0.1"
authors = ["james.adam.buckland@gmail.com"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ambuc/plotz_rs"
edition = "2021"

[workspace]
members = [
    "art/3dtest",
    "art/arcs",
    "art/croptest",
    "art/flowfield",
    "art/girih",
    "art/gravityfield",
    "art/lewitt",
    "art/tilings",
    "art/voronoi",
    "art/wang",
    "art/wrapping",
    "orchestrator",
    "plotz-color",
    "plotz-core",
    "plotz-geojson",
    "plotz-geometry",
    "plotz-geometry3d",
    "svg-splitter",
]


[dependencies]
argh = "*"
glob = "*"
plotz-core = { path = "plotz-core" }
plotz-geometry = { path = "plotz-geometry" }
tracing = "*"
tracing-subscriber = "*"

[dev-dependencies]
tempdir = "*"
resvg = "*"
usvg = "*"
tiny-skia = "*"
