[package]
name = "plotz-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
cairo-rs = { version = "0.14.9", features = ["png", "svg"] }
derive_more = "*"
float-ord = "*"
itertools = "*"
indicatif = "*"
lazy_static = "*"
multimap = "*"
tracing = "*"
tracing-subscriber = "*"
plotz-color = { path = "../plotz-color" }
plotz-geojson = { path = "../plotz-geojson" }
plotz-geometry = { path = "../plotz-geometry" }
serde_json = "*"
string-interner = "*"
thiserror = "*"
rand = "0.8.5"
typed-builder = "*"

[dev-dependencies]
tempdir = "*"
float_eq = "*"
