[package]
name = "plotz-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
cairo-rs = { version = "0.14.9", features = ["png", "svg"] }
float-ord = "*"
indicatif = { version = "*", features = ["rayon"] }
itertools = "*"
lazy_static = "*"
plotz-color = { path = "../plotz-color" }
rayon = "*"
plotz-geojson = { path = "../plotz-geojson" }
plotz-geometry = { path = "../plotz-geometry" }
rand = "0.8.5"
serde_json = "*"
thiserror = "*"
tracing = "*"
typed-builder = "*"

[dev-dependencies]
tempdir = "*"
float_eq = "*"
