[package]
name = "plotz-geometry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "*"
derivative = "*"
derive_more = "*"
either = "*"
float-cmp = "*"
float-ord = "*"
itertools = "*"
num = "*"
num-traits = "*"
petgraph = "0.6.3"
plotz-color = { path = "../plotz-color" }
rand = "*"
thiserror = "*"
typed-builder = "*"

[dev-dependencies]
float_eq = "*"
matches = "*"
assert_matches = "*"
test-case = "*"
