[package]
name = "plotz-geometry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "*"
nonempty = "*"
derive_more = "*"
enum_dispatch = "*"
float-cmp = "*"
float_eq = "*"
float-ord = "*"
itertools = "*"
num = "*"
anyhow = "*"
lazy_static = "*"
petgraph = "0.6.3"
plotz-color = { path = "../plotz-color" }
typed-builder = "*"

[dev-dependencies]
float_eq = "*"
matches = "*"
assert_matches = "*"
test-case = "*"
