[package]
name = "plotz-geometry3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotz-color = { path = "../plotz-color" }
either = "*"
float-cmp = "*"
float-ord = "*"
derivative = "*"
itertools = "*"
num = "*"
derive_more = "*"
num-traits = "*"
rand = "*"
thiserror = "*"
typed-builder = "*"

[dev-dependencies]
float_eq = "*"
matches = "*"
assert_matches = "*"
test-case = "*"

