[package]
name = "plotz-geometry3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotz-color = { path = "../plotz-color" }
plotz-geometry = { path = "../plotz-geometry" }
float-ord = "*"
itertools = "*"
derive_more = "*"
typed-builder = "*"

[dev-dependencies]
float_eq = "*"
matches = "*"
assert_matches = "*"
test-case = "*"

