[package]
name = "plotz-physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotz-color = { path = "../plotz-color" }
plotz-core = { path = "../plotz-core" }
plotz-geometry = { path = "../plotz-geometry" }
rand = { version = "0.8.5", features = ["alloc"] }
typed-builder = "*"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }