[package]
name = "threedtest"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "*"
itertools = "*"
anyhow = "*"
plotz-color = { path = "../../plotz-color" }
plotz-core = { path = "../../plotz-core" }
plotz-geometry = { path = "../../plotz-geometry" }
plotz-geometry3d = { path = "../../plotz-geometry3d" }
tracing = "*"
tracing-subscriber = "*"


[dev-dependencies]
test-case = "3.2.1"
