[package]
name = "threedtest"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "*"
itertools = "*"
anyhow = "*"
colorgrad = "*"
plotz-color = { path = "../../plotz-color" }
plotz-core = { path = "../../plotz-core" }
plotz-geometry = { path = "../../plotz-geometry" }
lazy_static = "*"
plotz-geometry3d = { path = "../../plotz-geometry3d" }
tracing = "*"
tracing-subscriber = "*"


[dev-dependencies]
test-case = "3.2.1"
