[package]
name = "girih"
version = "0.1.0"
edition = "2021"

[dependencies]


argh = "*"
itertools = "*"
plotz-color = { path = "../../plotz-color" }
plotz-core = { path = "../../plotz-core" }
plotz-geometry = { path = "../../plotz-geometry" }
rand = { version = "0.8.5", features = ["alloc"] }
tracing = "*"
tracing-subscriber = "*"
indicatif = "0.17.7"
average = "*"
float-ord = "*"
rayon = "*"