[package]
name = "voronoi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
argh = "*"
plotz-color = { path = "../../plotz-color" }
plotz-core = { path = "../../plotz-core" }
plotz-geometry = { path = "../../plotz-geometry" }
rand = { version = "0.8.5", features = ["alloc"] }
voronoice = "*"
